--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,22 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+	background: linear-gradient(-45deg, #ff000d, #b01a22, #0800ff, #00d9ff, #b700ff, #ff00dd);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
