--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@ body {
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
+    color: white;
 }
 
 @keyframes gradient {
@@ -20,4 +21,11 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+body {
+    display: grid;
+    place-items: center;
+    color: #fff;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
