--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,4 +28,5 @@ body {
     place-items: center;
     color: #fff;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+	font-size: 23px;
 }
