--- a/src/styles/VerseMod.scss
+++ b/src/styles/VerseMod.scss
@@ -1,4 +1,13 @@
 #center {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+        padding-top: 25px;
+    }
+
+    p {
+        padding-top: 25px;
+    }
 }
