--- a/src/styles/HeaderMod.scss
+++ b/src/styles/HeaderMod.scss
@@ -1,4 +1,9 @@
 #header {
     display:flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    #verse {
+        font-size: 35px;
+    }
 }
