--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,4 +29,23 @@ body {
     color: #fff;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 	font-size: 23px;
+	white-space: pre-wrap;
+
+	h3 {
+        padding-top: 25px;
+        
+    }
+
+    p {
+        padding-top: 25px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+	h1 {
+		font-size: 28px;
+	}
+	body {
+		font-size: 20px;
+	}
 }
