--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -43,9 +43,11 @@ body {
 
 @media screen and (max-width: 768px) {
 	h1 {
-		font-size: 28px;
+		font-size: 30px;
 	}
 	body {
-		font-size: 20px;
+		padding-left: 25px;
+		padding-right: 25px;
+		font-size: 16px;
 	}
 }
